# Risomorphism-1911

./: .gitignore  README.md  SKILL.md  cosmic-pyramid-ascii-art.txt  pyproject.toml
ascii_pipeline/: __init__.py  cli.py  converter.py  diagnostics.py  downsampling.py  eikon.py  image_modes.py  presets.py  preview.py  video_modes.py
docs/: canonical-foundation.md
examples/animated-eikon/: owl-animated.eikon  owl-player-24fps.html  owl-player.html
examples/dense-field/: README.md
examples/dense-field/preset-renders/: braille-detail.json  braille-detail.txt  d30-dense.json  fullsize-braille-detail.json  fullsize-braille-detail.txt  fullsize-d30-dense.json  fullsize-d30-dense.txt  fullsize-stroke-clarity.json  fullsize-stroke-clarity.txt  stroke-clarity.json  stroke-clarity.txt
examples/eikon/: museah-fullsize-192x96.eikon  museah-fullsize-plus-collapse-48x24.eikon  museah-fullsize-plus-collapse.eikon
examples/portrait/: README.md
examples/portrait/preset-renders/: braille-detail.json  braille-detail.txt  d30-dense.json  fullsize-braille-detail.json  fullsize-braille-detail.txt  fullsize-d30-dense.json  fullsize-stroke-clarity.json  fullsize-stroke-clarity.txt  stroke-clarity.json  (+1 more)
examples/scene-cosmic-pyramid/: README.md  build_animated_scene.py
gallery/: index.html
scripts/: render-gallery.py
tests/: test_cli.py  test_diagnostics.py  test_presets.py
tmp/: cosmic-pyramid-fullsize-192x96-48x24.eikon  cosmic-pyramid-fullsize-192x96.eikon
tmp/fullsize-192/: idle_frame_0001-ascii-art.txt
tmp/fullsize-sample/: idle_frame_0001-ascii-art.txt
(+20 files in other folders)
